--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -75,4 +75,5 @@ jobs:
 
     - uses: pypa/gh-action-pypi-publish@v1.6.4
       with:
+        verbose: true
         password: ${{ secrets.pypi_password }}
