--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -31,6 +31,9 @@ jobs:
 
     - name: Build and install
       run: pip install --verbose .[test]
-
+    
+    - name: Install pytest
+      run: pip install pytest
+      
     - name: Test
       run: python -m pytest
