--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,5 @@
 
 [submodule "whisper.cpp"]
     path = whisper.cpp
-    url = https://github.com/ggerganov/whisper.cpp
+    url = https://github.com/ggerganov/whisper.cpp.git
     branch = master
