update workflow pip.yml, fix pytest

--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -32,5 +32,8 @@ jobs:
     - name: Build and install
       run: pip install --verbose .[test]
 
+    - name: Install pytest
+      run: pip install pytest
+
     - name: Test
       run: python -m pytest
