--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Add requirements
       run: python -m pip install --upgrade wheel setuptools
 
+    - name: Install requirements
+      run: python -m pip install -r requirements.txt
+
     - name: Build and install
       run: pip install --verbose .[test]
 
