--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [windows-latest, macos-latest, ubuntu-latest]
-        python-version: ["3.7", "3.11"]
+        python-version: ["3.8", "3.11"]
 
     runs-on: ${{ matrix.platform }}
 
