update workflow pip.yml, update pytest unittest

--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -35,8 +35,6 @@ jobs:
     - name: Build and install
       run: pip install --verbose .[test]
 
-    - name: Install pytest
-      run: pip install pytest
-
     - name: Test
-      run: python -m pytest
+      run: python -m unittest discover ./tests/
+
