--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -36,7 +36,7 @@ jobs:
 
       # Currently conda-build requires the dead package "toml" but doesn't declare it
       - name: Prepare
-        run: conda install conda-build conda-verify pytest toml
+        run: conda install conda-build conda-verify toml
 
       - name: Build
         run: conda build conda.recipe
