--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -73,8 +73,7 @@ jobs:
         name: artifact
         path: dist
 
-    - uses: pypa/gh-action-pypi-publish@master
+    - uses: pypa/gh-action-pypi-publish@main
       with:
         verbose: true
-        user: ${{ env.PYPI_USER}}
         password: ${{ secrets.PYPI_API_TOKEN }}
