--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ sounddevice~=0.4.6
 webrtcvad~=2.0.10
 pydub~=0.25.1
 requests~=2.28.2
-tqdm==4.65.0
-platformdirs==3.1.0
+tqdm~=4.65.0
+platformdirs~=3.1.1
