--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -46,6 +46,9 @@ jobs:
     - uses: pypa/cibuildwheel@v2.16.5
       env:
         CIBW_ARCHS_MACOS: auto universal2
+        # Repair windows wheel
+        CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
+        CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
 
     - name: Verify clean directory
       run: git diff --exit-code
