--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -46,6 +46,8 @@ jobs:
     - uses: pypa/cibuildwheel@v2.16.5
       env:
         CIBW_ARCHS_MACOS: auto universal2
+        CIBW_REPAIR_WHEEL_COMMAND_MACOS: ""
+        CIBW_REPAIR_WHEEL_COMMAND_LINUX: ""
         # Repair windows wheel
 #        CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
 #        CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
