--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,4 +21,5 @@ jobs:
       - run: pip install mkdocs-material
       - run: pip install mkdocstrings[python]
       - run: pip install black
+      - run: pip install pywhispercpp
       - run: mkdocs gh-deploy --force
