--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -56,6 +56,11 @@ jobs:
       run: git diff --exit-code
       shell: bash
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
     - name: Install and Test Wheel
       run: |
         pip install wheelhouse/*.whl
