--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -64,6 +64,7 @@ jobs:
     - name: Install and Test Wheel
       run: |
         pip install pytest
+        pip install -r requirements.txt  # Install all dependencies
         pip install --no-index --find-links=wheelhouse pywhispercpp
         pytest tests/
 
