--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -15,7 +15,7 @@ jobs:
     name: Build SDist
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
 
@@ -39,25 +39,30 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
+    # Used to host cibuildwheel
+    - uses: actions/setup-python@v5
 
-    - uses: pypa/cibuildwheel@v2.16.5
+    - name: Install cibuildwheel
+      run: python -m pip install cibuildwheel==2.21.3
+
+    - name: Build wheels
+      run: python -m cibuildwheel --output-dir wheelhouse
       env:
         CIBW_ARCHS_MACOS: auto universal2
-        CIBW_REPAIR_WHEEL_COMMAND_MACOS: ""
-        CIBW_REPAIR_WHEEL_COMMAND_LINUX: ""
-        # Repair windows wheel
-#        CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
-#        CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
+         # for windows setup.py repairwheel step should solve it
 
     - name: Verify clean directory
       run: git diff --exit-code
       shell: bash
 
+    - name: List files
+      run: ls wheelhouse
+      
     - name: Upload wheels
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v3 # v4 does not support overwriting artifacts anymore.
       with:
         path: wheelhouse/*.whl
 
@@ -69,11 +74,11 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
-    - uses: actions/setup-python@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: "3.x"
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
         name: artifact
         path: dist
