--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -96,7 +96,7 @@ jobs:
 
     - name: Install and Test Wheel
       run: |
-        pip install --no-index --find-links=wheelhouse pywhispercpp
+        pip install --no-index --find-links=./wheelhouse pywhispercpp
         pytest tests/
 
 
