--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -25,8 +25,9 @@ jobs:
     - name: Check metadata
       run: pipx run twine check dist/*
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
+        name: artifact-sdist
         path: dist/*.tar.gz
 
 
@@ -42,6 +43,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: true
+
     # Used to host cibuildwheel
     - uses: actions/setup-python@v5
 
@@ -51,7 +53,7 @@ jobs:
     - name: Build wheels
       run: python -m cibuildwheel --output-dir wheelhouse
       env:
-        CIBW_ARCHS: all
+        CIBW_ARCHS: auto
          # for windows setup.py repairwheel step should solve it
 
     - name: Verify clean directory
@@ -60,10 +62,11 @@ jobs:
 
     - name: List files
       run: ls wheelhouse
-      
+
     - name: Upload wheels
-      uses: actions/upload-artifact@v3 # v4 does not support overwriting artifacts anymore.
+      uses: actions/upload-artifact@v4
       with:
+        name: artifact-${{ matrix.os }}
         path: wheelhouse/*.whl
 
   test_wheels:
@@ -75,13 +78,14 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
-        name: artifact
+        pattern: artifact-*
+        merge-multiple: true
         path: wheelhouse
 
     - name: Verify artifact download
@@ -89,7 +93,7 @@ jobs:
         ls -l wheelhouse
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
@@ -120,7 +124,8 @@ jobs:
 
     - uses: actions/download-artifact@v4
       with:
-        name: artifact
+        pattern: artifact-*
+        merge-multiple: true
         path: dist
 
     - uses: pypa/gh-action-pypi-publish@release/v1
