--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -48,7 +48,7 @@ jobs:
     - uses: actions/setup-python@v5
 
     - name: Install cibuildwheel
-      run: python -m pip install cibuildwheel==2.21.3
+      run: python -m pip install cibuildwheel
 
     - name: Build wheels
       run: python -m cibuildwheel --output-dir wheelhouse
