fix local versions not allowed in PYPI upload

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires = [
     "ninja",
     "cmake>=3.12",
     "repairwheel",
+    "setuptools-scm>=8"
 ]
 build-backend = "setuptools.build_meta"
 
@@ -48,3 +49,6 @@ extend-ignore = [
   "E501",   # Line too long
 ]
 target-version = "py39"
+
+[tool.setuptools_scm]
+version_file = "_version.py"
